# ai-costing

./: .coverage  .cursorrules  .env.example  .gitignore  README.md  app.py  docker-compose.yml  legal_chunking.py  legal_entity_extraction.py  pyproject.toml  requirements.txt
Sample_input_docs/: uk_legal_case_costs.txt
Sample_output_docs/: Bill_of_Costs_Sample.docx  Points_of_Dispute_Sample.docx  Replies_to_Points_of_Dispute_Sample.docx  bills_combined.md
docs/: legal_cost_draftsman.md  models.md
examples/: example_usage.py
generated_bills/: bill_of_costs_test_20250608_204030.html  bill_of_costs_test_20250608_204159.html
src/: app.py  config.py
src/document_processing/: processor.py
src/generation/: bill_generator.py  generator.py
src/graph/: operations.py
src/llm/: operations.py
src/models/: domain.py
src/scripts/: check_db_content.py  clear_database.py  debug_disbursement.py  generate_document.py  ingest_documents.py  init_db.py  list_cases.py  streamlit_interface.py  verify_complete_document.py  verify_documents.py
templates/: bill_of_costs.html
tests/: conftest.py  test_basic.py
